Fix alignment of 'bigButton' in tab bar

--- a/components/tabBar/index.less
+++ b/components/tabBar/index.less
@@ -39,7 +39,7 @@
     margin-top: -25px;
     width: 65px;
     height: 65px;
-    margin-right: 17px; 
+    margin-right: 4px; 
 }
 
 #tabBar li g {
